(feed) Fix issue on mobile when clicking on hover area of recent images

--- a/src/app/features/home/components/feed/feed.component.scss
+++ b/src/app/features/home/components/feed/feed.component.scss
@@ -70,9 +70,6 @@ astrobin-masonry-layout.activity-feed-masonry-layout {
 }
 
 .image-container {
-  display: block;
-  height: 100%;
-
   astrobin-loading-indicator {
     background: rgba(0, 0, 0, .75);
     border-radius: .75rem;
